# broiestbot-db

./: .env.example  .gitignore  Makefile  README.md  config.py  gunicorn.conf.py  log.py  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: python-app.yml
broiest/: __init__.py  assets.py  models.py
broiest/static/less/: table.less
broiest/tables/: layout.py  table_view.py
broiest/templates/: head.jinja2
broiestbot_db/: models.py
broiestbot_db/static/less/: nav.less
broiestbot_db/tables/: table_view.py
broiestbot_db/templates/: nav.jinja2
clients/: database.py
